--- a/hanwckf.rax3000m.config
+++ b/hanwckf.rax3000m.config
@@ -90,8 +90,8 @@ CONFIG_TARGET_MULTI_PROFILE=y
 #
 # CONFIG_TARGET_ALL_PROFILES is not set
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
-# CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_abt_asr3000 is not set
-# CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_abt_asr3000 is not set
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_abt_asr3000=y
+CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_abt_asr3000=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_cetron_ct3003=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_cetron_ct3003=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_cmcc_a10=y
