--- a/.github/workflows/Build_lean_znm2.yml
+++ b/.github/workflows/Build_lean_znm2.yml
@@ -106,7 +106,6 @@ jobs:
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
-        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
     # 查看磁盘使用情况
     - name: Check space usage
       if: (!cancelled())
@@ -116,7 +115,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}_$(date +"%Y%m%d%H%M")
         path: openwrt/bin
     # 整理编译好的固件
     - name: Organize files
@@ -135,7 +134,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt_firmware${{ env.DEVICE_NAME }}_$(date +"%Y%m%d%H%M")
         path: ${{ env.FIRMWARE }}
     
     - name: Generate release tag
