--- a/.github/workflows/Build_hanwckf_rax3000m.yml
+++ b/.github/workflows/Build_hanwckf_rax3000m.yml
@@ -115,7 +115,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt_bin${{ env.DEVICE_NAME }}_$(date +"%Y%m%d%H%M")
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}
         path: openwrt/bin
     # 整理编译好的固件
     - name: Organize files
@@ -134,9 +134,8 @@ jobs:
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}_$(date +"%Y%m%d%H%M")
+        name: OpenWrt_firmware${{ env.DEVICE_NAME }}
         path: ${{ env.FIRMWARE }}
-    
     - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
